--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -15,7 +15,7 @@
     </item>
     <item
         android:id="@+id/share"
-        android:actionProviderClass="android.widget.ShareActionProvider"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         android:title="share"
         app:showAsAction="always">
     </item>
