--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -16,7 +16,8 @@
     <item
         android:id="@+id/share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="ifRoom"
         android:title="share"
-        app:showAsAction="always">
+        >
     </item>
 </menu>
