--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -5,8 +5,9 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="160dp"
+        android:layout_height="180dp"
         android:id="@+id/imageView"
+        android:scaleType="fitXY"
         android:src="@drawable/nav_header"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
