--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".activity.WelcomeActivity">
     <ImageView
+        android:id="@+id/startImg"
+        android:scaleType="fitXY"
         android:background="@drawable/welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/startText"
+        android:text="向开源致敬"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="41dp" />
 </RelativeLayout>
