--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -19,7 +19,7 @@
         android:layout_height="80dp"
         android:id="@+id/imageView1"
         android:src="@drawable/photo"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         app:riv_corner_radius="30dip"
         app:riv_border_width="2dip"
         app:riv_border_color="#fff"
