--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -9,6 +9,7 @@
     app:cardCornerRadius="3dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardElevation="5dp"
