--- a/app/src/main/res/layout/activity_news_item.xml
+++ b/app/src/main/res/layout/activity_news_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/lr"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -41,6 +42,18 @@
 
             </RelativeLayout>
 
+
+            <TextView
+                android:id="@+id/item_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="120dp"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="这是标题啦"
+                android:textColor="#fff"
+                android:textSize="20sp" />
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
