--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -10,11 +10,13 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="5dp"
+        android:clickable="true"
         app:cardCornerRadius="3dp"
-        >
+        app:cardElevation="8dp">
+
+
         <LinearLayout
             android:id="@+id/item_linearlayout"
             android:layout_width="match_parent"
