--- a/app/src/main/res/layout/fragment_content2.xml
+++ b/app/src/main/res/layout/fragment_content2.xml
@@ -2,8 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
- <TextView
+ <android.support.v4.widget.SwipeRefreshLayout
+     android:id="@+id/srl"
      android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:text="这是fragment2"/>
+     android:layout_height="wrap_content">
+
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rl_fragment2"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+  </android.support.v7.widget.RecyclerView>
+ </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
