--- a/app/src/main/res/layout/activity_news_item.xml
+++ b/app/src/main/res/layout/activity_news_item.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lr"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -11,110 +11,54 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:fitsSystemWindows="true">
-
+        android:fitsSystemWindows="true"
+        app:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="@color/colorPrimary"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true">
-
-                <ImageView
-                    android:id="@+id/head_img"
-                    android:src="@drawable/nav_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-
-                <TextView
-                    android:id="@+id/tv_copyright"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true" />
-
-            </RelativeLayout>
-
-
-            <android.support.v7.widget.Toolbar
-
-                android:id="@+id/item_tl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize"
-                app:popupTheme="@style/ToolbarPopupTheme"
-                app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:titleTextAppearance="@style/ToolbarTitle">
-
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
+            <ImageView
                 android:id="@+id/news_header"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true">
-
-            </RelativeLayout>
-
-
-            <TextView
-                android:id="@+id/item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="120dp"
-                android:gravity="center"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="#fff"
-                android:textSize="20sp" />
-
-            <android.support.v4.widget.NestedScrollView
-                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:layout_below="@+id/news_header"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="46dp">
+                android:scaleType="fitXY" />
 
-                <WebView
-                    android:id="@+id/item_newsinfo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/news_header"
-                    android:lineSpacingExtra="5dp" />
-            </android.support.v4.widget.NestedScrollView>
-        </RelativeLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/item_tl"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:background="?attr/fabColorCustomized"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_marginBottom="0dp">
+        <include layout="@layout/webiew" />
+    </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:elevation="20dp"
         android:src="@drawable/share"
-        app:backgroundTint="@color/colorPrimary"/>
-
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
