--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#009688</color>
-    <!--<color name="colorPrimaryDark">#00796B</color>-->
+    <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#009688</color>
+    <color name="colorStatusBarDark">#1e282d</color>
+    <color name="colorStatusBarLight">#00796B</color>
 </resources>
