--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -38,7 +38,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color1"
-                android:src="#FF6347"
+                android:src="@color/AppTheme1"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -49,7 +49,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color2"
-                android:src="#FFE4C4"
+                android:src="@color/AppTheme2"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -60,7 +60,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color3"
-                android:src="#DAA520"
+                android:src="@color/AppTheme3"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -71,7 +71,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color4"
-                android:src="#EE82EE"
+                android:src="@color/AppTheme4"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -90,7 +90,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color5"
-                android:src="#DCDCDC"
+                android:src="@color/AppTheme5"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -101,7 +101,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color6"
-                android:src="#D2B48C"
+                android:src="@color/AppTheme6"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -112,7 +112,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color7"
-                android:src="#9370DB"
+                android:src="@color/AppTheme7"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
@@ -123,7 +123,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:id="@+id/color8"
-                android:src="#3CB371"
+                android:src="@color/AppTheme8"
                 android:scaleType="center"
                 app:riv_oval="true"
                 android:onClick="onClick"
