删除了那个测试

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="AppThemeBack5">#E64A19</color>
 
     <color name="AppTheme6">#4CAF50</color>
-    <color name="AppThemeBack6">#00796B</color>
+    <color name="AppThemeBack6">#388E3C</color>
 
     <color name="AppTheme7">#FF9800</color>
     <color name="AppThemeBack7">#F57C00</color>
