删除了那个测试

--- a/app/src/main/res/layout/fragment_content1.xml
+++ b/app/src/main/res/layout/fragment_content1.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <!--<com.rjxy.xmut.mynews.ui.SlideShowView
+        android:id="@+id/slideshowView"
+        android:layout_width="fill_parent"
+        android:layout_height="120dp" />
+        !-->
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl"
         android:layout_width="wrap_content"
