--- a/app/src/main/res/layout/activity_news_item.xml
+++ b/app/src/main/res/layout/activity_news_item.xml
@@ -57,7 +57,7 @@
             <WebView
                 android:id="@+id/item_newsinfo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="9000dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
