--- a/app/src/main/res/layout/fragment_content1.xml
+++ b/app/src/main/res/layout/fragment_content1.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
+    android:background="#F6F6F6"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
