--- a/app/src/main/res/layout/fragment_content2.xml
+++ b/app/src/main/res/layout/fragment_content2.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="8dp">
  <android.support.v4.widget.SwipeRefreshLayout
      android:id="@+id/srl"
      android:layout_width="wrap_content"
