--- a/app/src/main/res/layout/recyclerview_item2.xml
+++ b/app/src/main/res/layout/recyclerview_item2.xml
@@ -28,7 +28,7 @@
 
             <TextView
                 android:id="@+id/tv_newstitle"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginLeft="8dp"
