--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -5,19 +5,6 @@
     <item
         android:id="@+id/setting"
         android:title="setting"
-        app:showAsAction="never">
-    </item>
-    <item
-        android:id="@+id/search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="ifRoom"
-        android:title="search">
-    </item>
-    <item
-        android:id="@+id/share"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-        app:showAsAction="ifRoom"
-        android:title="share"
-        >
-    </item>
+        app:showAsAction="never"></item>
+
 </menu>
